# clipboard-stash

./: .gitignore  IDEATION.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: clipboard.rs  db.rs  hotkey.rs  lib.rs  main.rs  paste.rs
src/components/: ClipboardCapture.tsx  HistoryItem.tsx  HistoryList.tsx  HotkeyHint.tsx  KeybindPanel.tsx  SearchBar.tsx  SnippetPanel.tsx  ThemeToggle.tsx
src/data/: seed.ts
src/lib/: jamo.ts  mask.ts  search.ts  snippets.ts  store.ts  types.ts
src/styles/: app.css  desktop.css  tokens.css
